--- a/index.css
+++ b/index.css
@@ -4,12 +4,14 @@ body {
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
-    height: 100vh;
+    margin-top: 30px;
     width: 100%;
+    height: 100vh;
+    background-position: center;
 }
 
 .container {
-    max-width: 80%;
+    max-width: 70%;
     background-color: rgba(255, 255, 255, 0.5);
     margin: auto;
     border: 2px solid black;
